The debug and verbose flags work with getopt. Added a new method to print the global ROSPEC struct that will apply settings via configurable flags from argv. I need to fix an oddity with debug that prints out the wrong date to the file name.

--- a/moo_llrpc/Makefile
+++ b/moo_llrpc/Makefile
@@ -19,7 +19,12 @@ LTKC_DIR = .
 LTKC_LIBS = $(LTKC_DIR)/lib/libltkc.a
 LTKC_INCL = -I$(LTKC_DIR)/include
 CFLAGS = -g $(LTKC_INCL)
+TARGET = moo_concrete_reader
 
-
-moo_concrete_reader : moo_concrete_reader.c
+$(TARGET) : moo_concrete_reader.c
 	$(CC) $(CFLAGS) -o moo_concrete_reader moo_concrete_reader.c $(LTKC_LIBS)
+
+clean:
+	-rm -f $(TARGETS)
+
+.PHONY: clean
