Modified make to have a clean because I am lazy... and its a lazy makefile at best.

--- a/moo_llrpc/Makefile
+++ b/moo_llrpc/Makefile
@@ -25,6 +25,6 @@ $(TARGET) : moo_concrete_reader.c
 	$(CC) $(CFLAGS) -o moo_concrete_reader moo_concrete_reader.c $(LTKC_LIBS)
 
 clean:
-	-rm -f $(TARGETS)
+	-rm -f $(TARGET)
 
 .PHONY: clean
